tests/ui/only_generic.rs
#[derive_restricted::derive_where(T)]
struct Test<T>;

fn main() {}
